Add web plugin functionality.

--- a/lib/GUI/css/styles.less
+++ b/lib/GUI/css/styles.less
@@ -20,6 +20,17 @@
   .main-header {
     background: @white;
 
+    .navbar-default .navbar-nav > .open {
+      a.dropdown-toggle, a.dropdown-toggle:focus {
+        color: #fff;
+        background-color: #d9534f;
+      }
+      a:hover {
+        color: #fff;
+        background-color: #d9534f;
+      }
+    }
+
     .navbar {
       margin-bottom: 0;
     }
